[GLib] Enable damage propagation by default
Reviewed by NOBODY (OOPS!).

Enable propagation of frame damage information by default. It can still
be disabled using the features API as usual.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:

Signed-off-by: Adrian Perez de Castro <aperez@igalia.com>

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -5919,11 +5919,11 @@ PropagateDamagingInformation:
    condition: USE(COORDINATED_GRAPHICS)
    defaultValue:
      WebCore:
-       default: false
+       default: true
      WebKitLegacy:
-       default: false
+       default: true
      WebKit:
-       default: false
+       default: true
 
 PunchOutWhiteBackgroundsInDarkMode:
   type: bool
