[GLib] Enable damage propagation by default
Reviewed by NOBODY (OOPS!).

Enable propagation of frame damage information by default. It can still
be disabled using the features API as usual.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:

Signed-off-by: Adrian Perez de Castro <aperez@igalia.com>

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -6006,12 +6006,12 @@ PropagateDamagingInformation:
    condition: ENABLE(DAMAGE_TRACKING)
    defaultValue:
      WebKitLegacy:
-       default: false
+       default: true
      WebKit:
        "PLATFORM(GTK)": true
-       default: false
+       default: true
      WebCore:
-       default: false
+       default: true
 
 PunchOutWhiteBackgroundsInDarkMode:
   type: bool
@@ -7985,11 +7985,11 @@ UseDamagingInformationForCompositing:
   condition: ENABLE(DAMAGE_TRACKING)
   defaultValue:
     WebKitLegacy:
-      default: false
+      default: true
     WebKit:
-      default: false
+      default: true
     WebCore:
-      default: false
+      default: true
 
 UseGPUProcessForCanvasRenderingEnabled:
   type: bool
