[Skia] Disable accelerated canvas by default
* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml: Disable
  accelerated canvas, given we are using Skia with CPU rendering for

Signed-off-by: Adrian Perez de Castro <aperez@igalia.com>

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -1703,7 +1703,7 @@ CanvasUsesAcceleratedDrawing:
       "PLATFORM(IOS_FAMILY) && !PLATFORM(IOS_FAMILY_SIMULATOR)": true
       default: false
     WebKit:
-      default: true
+      default: false
     WebCore:
       default: false
 
