[GStreamer][WPE] Do not require user gestures to allow speaker selection
Note: Do NOT upstream.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -7200,8 +7200,10 @@ SpeakerSelectionRequiresUserGesture:
     WebKitLegacy:
       default: true
     WebKit:
+      "USE(GSTREAMER) && PLATFORM(WPE)": false
       default: true
     WebCore:
+      "USE(GSTREAMER) && PLATFORM(WPE)": false
       default: true
 
 SpeechRecognitionEnabled:
