--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -7257,8 +7257,10 @@ SpeakerSelectionRequiresUserGesture:
     WebKitLegacy:
       default: true
     WebKit:
+      "USE(GSTREAMER) && PLATFORM(WPE)": false
       default: true
     WebCore:
+      "USE(GSTREAMER) && PLATFORM(WPE)": false
       default: true
 
 SpeechRecognitionEnabled:
