[WPE] Initial support for color picker
Reviewed by NOBODY (OOPS!).

Explanation of why this fixes the bug (OOPS!).

* Source/WebKit/PlatformWPE.cmake:
* Source/WebKit/SourcesWPE.txt:
* Source/WebKit/UIProcess/API/glib/WebKitColorChooserRequest.h.in: Renamed from Source/WebKit/UIProcess/API/gtk/WebKitColorChooserRequest.h.in.
* Source/WebKit/UIProcess/API/glib/WebKitWebView.cpp:
(webkit_web_view_class_init):
* Source/WebKit/UIProcess/API/glib/WebKitWebView.h.in:
* Source/WebKit/UIProcess/API/glib/WebKitWebViewPrivate.h:
* Source/WebKit/UIProcess/API/wpe/PageClientImpl.cpp:
(WebKit::PageClientImpl::createColorPicker):
* Source/WebKit/UIProcess/API/wpe/WebKitColorChooser.cpp: Added.
(WebKit::WebKitColorChooser::create):
(WebKit::WebKitColorChooser::WebKitColorChooser):
(WebKit::WebKitColorChooser::~WebKitColorChooser):
(WebKit::WebKitColorChooser::endPicker):
(WebKit::WebKitColorChooser::colorChooserRequestFinished):
(WebKit::WebKitColorChooser::colorChooserRequestRGBAChanged):
(WebKit::WebKitColorChooser::showColorPicker):
* Source/WebKit/UIProcess/API/wpe/WebKitColorChooser.h: Added.
* Source/WebKit/UIProcess/API/wpe/WebKitColorChooserRequest.cpp: Added.
(webkitColorChooserRequestDispose):
(webkitColorChooserRequestGetProperty):
(webkitColorChooserRequestSetProperty):
(webkit_color_chooser_request_class_init):
(webkit_color_chooser_request_set_rgba):
(webkit_color_chooser_request_get_rgba):
(webkit_color_chooser_request_get_element_rectangle):
(webkit_color_chooser_request_finish):
(webkit_color_chooser_request_cancel):
(webkitColorChooserRequestCreate):
* Source/WebKit/UIProcess/API/wpe/WebKitColorChooserRequestPrivate.h: Added.
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::sharedFileQueueSingleton):
(WebKit::StorageRequests::processOrAppend):
(WebKit::StorageRequests::processNextIfAny):
(WebKit::StorageRequests::singleton):
(WebKit::WebPageProxyFrameLoadStateObserver::create):
(WebKit::PageLoadTimingFrameLoadStateObserver::ref const):
(WebKit::PageLoadTiming

--- a/Source/WebKit/UIProcess/API/glib/WebKitColorChooserRequest.h.in
+++ b/Source/WebKit/UIProcess/API/glib/WebKitColorChooserRequest.h.in
@@ -29,8 +29,17 @@
 #ifndef WebKitColorChooserRequest_h
 #define WebKitColorChooserRequest_h
 
+#include <glib-object.h>
+#include <@API_INCLUDE_PREFIX@/WebKitDefines.h>
+
+#if PLATFORM(GTK)
 #include <gtk/gtk.h>
-#include <webkit/WebKitDefines.h>
+#endif
+
+#if PLATFORM(WPE)
+#include "wpe/WebKitColor.h"
+#include "wpe/WebKitRectangle.h"
+#endif
 
 G_BEGIN_DECLS
 
@@ -49,6 +58,7 @@ struct _WebKitColorChooserRequestClass {
 
 WEBKIT_DECLARE_FINAL_TYPE (WebKitColorChooserRequest, webkit_color_chooser_request, WEBKIT, COLOR_CHOOSER_REQUEST, GObject)
 
+#if PLATFORM(GTK)
 WEBKIT_API void
 webkit_color_chooser_request_get_rgba              (WebKitColorChooserRequest *request,
                                                     GdkRGBA                   *rgba);
@@ -60,6 +70,21 @@ webkit_color_chooser_request_set_rgba              (WebKitColorChooserRequest *r
 WEBKIT_API void
 webkit_color_chooser_request_get_element_rectangle (WebKitColorChooserRequest *request,
                                                     GdkRectangle              *rect);
+#endif
+
+#if PLATFORM(WPE)
+WEBKIT_API void
+webkit_color_chooser_request_get_rgba              (WebKitColorChooserRequest *request,
+                                                    WebKitColor               *rgba);
+
+WEBKIT_API void
+webkit_color_chooser_request_set_rgba              (WebKitColorChooserRequest *request,
+                                                    const WebKitColor         *rgba);
+
+WEBKIT_API void
+webkit_color_chooser_request_get_element_rectangle (WebKitColorChooserRequest *request,
+                                                    WebKitRectangle           *rect);
+#endif
 
 WEBKIT_API void
 webkit_color_chooser_request_finish                (WebKitColorChooserRequest *request);
