Gamepad: Add vendorId, productId, name attributes https://bugs.webkit.org/show_bug.cgi?id=273981
Reviewed by NOBODY (OOPS!).

Explanation of why this fixes the bug (OOPS!).

* Source/WebCore/CMakeLists.txt:
* Source/WebCore/DerivedSources.make:
* Source/WebCore/Modules/gamepad/Gamepad+ID.idl: Copied from Source/WebCore/testing/MockGamepad.h.
* Source/WebCore/Modules/gamepad/Gamepad.cpp:
(WebCore::Gamepad::Gamepad):
* Source/WebCore/Modules/gamepad/Gamepad.h:
* Source/WebCore/platform/gamepad/PlatformGamepad.h:
(WebCore::PlatformGamepad::name const):
(WebCore::PlatformGamepad::productId const):
(WebCore::PlatformGamepad::vendorId const):
* Source/WebCore/platform/gamepad/manette/ManetteGamepad.cpp:
(WebCore::parseId):
(WebCore::ManetteGamepad::ManetteGamepad):
* Source/WebCore/testing/MockGamepad.cpp:
(WebCore::MockGamepad::MockGamepad):

--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -1795,6 +1795,7 @@ list(APPEND WebCore_IDL_INCLUDES
 
 list(APPEND WebCore_NON_SVG_IDL_FILES
     Modules/gamepad/Gamepad.idl
+    Modules/gamepad/Gamepad+ID.idl
     Modules/gamepad/GamepadButton.idl
     Modules/gamepad/GamepadEffectParameters.idl
     Modules/gamepad/GamepadEvent.idl
